traces/bug_109.txt
examples++-load/BinaryIO.cpp:89: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/BinaryIO.cpp:89:1: initialization of callDoLoadInit
87.   }
88.   
89. > LOADFUNC(Load_Init)

examples++-load/BinaryIO.cpp:89:1: call to DoLoadInit
87.   }
88.   
89. > LOADFUNC(Load_Init)

examples++-load/BinaryIO.cpp:89:1: call to addInitFunct
  87.   }
  88.   
  89. > LOADFUNC(Load_Init)

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
